MDEV-3914 fix.

Fixed algorithm of detecting of first real table in view/subquery-in-the-FROM-clase.